# main_idf

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  LED_button.c  LED_button.h  OTA.c  OTA.h  adpcm_ima.c  adpcm_ima.h  audio_player.c  audio_player.h  audio_record.c  audio_record.h  audio_recorder.c  audio_recorder.h  audio_sd_working.c  audio_stream.c  audio_stream.h  coredump_manager.c  coredump_manager.h  dns_server.c  dns_server.h  hello_world.code-workspace  http_server.c  http_server.h  idf_component.yml  main.c  pins.h  sd_card_utils.c  sd_card_utils.h  server_cert.pem  tag_reader.c  tag_reader.h  websocket_manager.c  websocket_manager.h  websocket_new.c  wifi.c  wifi.h  wifi_manager.c  wifi_manager.h
